--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,10 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: npm
+      # - uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 18
+      #     cache: npm
       - uses: pnpm/action-setup@v2
         with:
           version: 7.22.0
