--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -2,6 +2,7 @@ name: Build and deploy to gh-pages
 permissions:
   contents: write
 on:
+  workflow_dispatch: {}
   push:
     branches:
       - main
