--- a/.lintstagedrc.yml
+++ b/.lintstagedrc.yml
@@ -1,7 +1,1 @@
-'*.{ts,tsx,js}':
-  - 'eslint --cache --cache-location ./node_modules/.cache/.eslintcache --fix'
-  - 'prettier --loglevel warn --cache --write'
-'*.scss':
-  - 'stylelint --cache --cache-location ./node_modules/.cache/.stylelintcache --fix'
-  - 'prettier --loglevel warn --cache --write'
-'*.{json,yml}': 'prettier --loglevel warn --cache --write'
+"*.{ts,js,json,yml}": "prettier --loglevel warn --cache --write"
