--- a/package.json
+++ b/package.json
@@ -1,46 +1,20 @@
 {
   "name": "lalu",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "export": "next export",
-    "start": "next start",
-    "types": "tsc --noEmit --project ./tsconfig.json",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/.eslintcache .",
-    "stylelint": "stylelint --cache --cache-location ./node_modules/.cache/.stylelintcache 'src/**/*.scss'",
-    "stylecheck": "sass --update -q ./src:./node_modules/.cache/.stylecheckcache",
+    "w": "pnpm --filter @lalu/webapp",
+    "sa": "pnpm --filter @lalu/sanity",
     "prepare": "husky install"
   },
-  "dependencies": {
-    "@next/font": "13.1.6",
-    "@types/node": "18.13.0",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "classnames": "^2.3.2",
-    "eslint-config-next": "13.1.6",
-    "lodash": "^4.17.21",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@svgr/webpack": "^6.5.1",
-    "@types/lodash": "^4.14.191",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.1",
+    "prettier": "^2.8.4",
     "eslint": "8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
-    "eslint-plugin-node": "^11.1.0",
-    "husky": "^8.0.3",
-    "include-media": "^2.0.0",
-    "lint-staged": "^13.1.1",
-    "prettier": "^2.8.4",
-    "reset-css": "^5.0.1",
-    "sass": "^1.58.0",
-    "stylelint": "^14.16.1",
-    "stylelint-config-prettier-scss": "^0.0.1",
-    "stylelint-config-standard-scss": "^6.1.0"
+    "eslint-plugin-node": "^11.1.0"
   }
 }
