--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,11 +19,11 @@ jobs:
               args: [--frozen-lockfile]
       - name: Build
         run: |
-          pnpm build
-          pnpm export
-          touch out/.nojekyll
+          pnpm w build
+          pnpm w export
+          touch webapp/out/.nojekyll
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: out
+          folder: webapp/out
