--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@lalu/sanity": "workspace:*",
     "@next/font": "13.1.6",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "classnames": "^2.3.2",
     "eslint-config-next": "13.1.6",
     "lodash": "^4.17.21",
+    "markdown-it": "^13.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
