--- a/webapp/package.json
+++ b/webapp/package.json
@@ -26,12 +26,15 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "sanity-codegen": "^0.9.8",
+    "slick-carousel": "^1.8.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
     "@types/lodash": "^4.14.191",
+    "@types/react-slick": "^0.23.10",
     "include-media": "^2.0.0",
     "reset-css": "^5.0.1",
     "sass": "^1.58.0",
